# device-sdk-c

./: .gitignore  Attribution.txt  CHANGELOG.md  CHANGES  Doxyfile  Jenkinsfile  Jenkinsfile.sandbox  Makefile  OWNERS.md  README.IOT.md  README.md  README.v2.md  README.v3.md  TODO  main  master
.github/: PULL_REQUEST_TEMPLATE.md  semantic.yml
.github/ISSUE_TEMPLATE/: 1-bug-report.md  2-feature-request.md  3-docs-bug.md
docs/: configuration.md  device-sdk.raml  deviceprofiles.md  metrics.md  servicewritersguide.md  startup.md
include/devsdk/: devsdk-base.h  devsdk.h
include/edgex/: device-mgmt.h  devices.h  devsdk.h  edgex-base.h  edgex-logging.h  edgex.h  edgex_logging.h  error.h  eventgen.h  os.h  profiles.h  registry.h  rest-server.h  secrets.h
scripts/: Dockerfile.alpine  Dockerfile.alpine-3.11  Dockerfile.alpine-3.11-base  Dockerfile.alpine-3.7  Dockerfile.alpine-3.9  Dockerfile.alpine-3.9-base  Dockerfile.alpine-base  build.sh  entrypoint.sh
src/: CMakeLists.txt
src/c/: CMakeLists.txt  api.h  autoevent.c  autoevent.h  base64.c  base64.h  bus-impl.h  bus-mqtt.c  bus-redstr.c  bus.c  bus.h  callback.c  callback.h  callback2.c  callback2.h  callback3.c  callback3.h  cmdinfo.h  config.c  config.h  consul.c  consul.h  correlation.c  correlation.h  data-mqtt.c  data-mqtt.h  data-redstr.c  data-redstr.h  data-rest.c  data-rest.h  data.c  data.h  defs.h.in  device.c  device.h  devman.c  devmap.c  devmap.h  devsdk-base.c  devutil.c  (+67 more)
src/c/cunit/: Automated.c  Basic.c  CMakeLists.txt  CUnit.h  Console.c  MyMem.h  TestDB.c  TestDB.h  TestRun.c  Util.c
src/c/examples/: CMakeLists.txt  README.md  commonconfiguration.yaml  example.Makefile  simple.c  template.c
src/c/examples/bitfields/: CMakeLists.txt  README.md  device-bitfields.c
src/c/examples/bitfields/res/: Bitfields.yaml  configuration.toml  configuration.yaml
src/c/examples/bitfields/res/devices/: Bitfields.json
src/c/examples/bitfields/res/profiles/: Bitfields.yaml  Example-Bitfields.json
src/c/examples/counters/: CMakeLists.txt  README.md  device-counter.c
src/c/examples/counters/res/: Counter.yaml  configuration.toml  configuration.yaml
src/c/examples/counters/res/devices/: Counters.json
src/c/examples/counters/res/profiles/: Counter.json  Counter.yaml
src/c/examples/discovery/: CMakeLists.txt  README.md  template.c  watcher.json  watcher1.json  watcher2.json
src/c/examples/discovery/res/: TemplateProfile.yaml  configuration.toml  configuration.yaml
src/c/examples/discovery/res/devices/: readme.txt
src/c/examples/discovery/res/profiles/: TemplateProfile.yaml
src/c/examples/discovery/res/watchers/: watcher1.json  watcher2.json
src/c/examples/file/: CMakeLists.txt  README.md  device-file.c
src/c/examples/file/res/: FileExampleProfile.yaml  configuration.toml  configuration.yaml
src/c/examples/file/res/devices/: file1.json
src/c/examples/file/res/profiles/: FileExampleProfile.json  FileExampleProfile.yaml
src/c/examples/gyro/: CMakeLists.txt  README.md  device-gyro.c
src/c/examples/gyro/res/: Gyro.yaml  configuration.toml  configuration.yaml
src/c/examples/gyro/res/devices/: gyro.json
src/c/examples/gyro/res/profiles/: Gyro.json  Gyro.yaml
src/c/examples/random/: CMakeLists.txt  README.md  device-random.c
src/c/examples/random/res/: RandomExampleProfile.yaml  configuration.toml  configuration.yaml
src/c/examples/random/res/devices/: randomdevice1.json
src/c/examples/random/res/profiles/: RandomExampleProfile.json  RandomExampleProfile.yaml
src/c/examples/res/: DL-05.profile.yaml  ExampleProfile.yaml  TemplateProfile.yaml  configuration.toml  configuration.yaml
src/c/examples/res/devices/: device1.json
src/c/examples/res/profiles/: TemplateProfile.json  TemplateProfile.yaml
src/c/examples/terminal/: CMakeLists.txt  README.md  device-terminal.c
src/c/examples/terminal/res/: Terminal.yaml  configuration.toml  configuration.yaml
src/c/examples/terminal/res/devices/: terminal.json
src/c/examples/terminal/res/profiles/: Terminal.json  Terminal.yaml
src/c/examples/v1/: CMakeLists.txt  README.md
src/c/examples/v2/: CMakeLists.txt  template.c
src/c/examples/v2/counters/: CMakeLists.txt  README.md  device-counter.c
src/c/examples/v2/counters/res/: Counter.yaml
src/c/examples/v2/gyro/: CMakeLists.txt  README.md  device-gyro.c
src/c/examples/v2/gyro/res/: Gyro.yaml  configuration.toml
src/c/examples/v2/random/: CMakeLists.txt  README.md  device-random.c
src/c/examples/v2/random/res/: RandomExampleProfile.yaml
src/c/examples/v2/terminal/: CMakeLists.txt  README.md  device-terminal.c
src/c/examples/v2/terminal/res/: Terminal.yaml  configuration.toml
src/c/utests/: CMakeLists.txt
src/c/utests/base64/: CMakeLists.txt  base64.c  base64.h
src/c/utests/runner/: CMakeLists.txt  runner.c
src/cmake/: FindIOT.cmake  FindLIBHIREDIS.cmake  FindLIBMICROHTTP.cmake  FindLIBPAHO.cmake  FindLIBPROM.cmake  FindLIBPROMHTTP.cmake  FindLIBUUID.cmake  FindLIBYAML.cmake  FindLibCBOR.cmake
