find_package (Curses)
add_subdirectory (counters)
add_subdirectory (random)
add_subdirectory (gyro)
add_subdirectory (discovery)
if (CURSES_HAVE_CURSES_H)
  add_subdirectory (terminal)
endif()
add_subdirectory (v2)
add_executable (template template.c)
target_include_directories (template PRIVATE ../../../include)
target_link_libraries (template PRIVATE csdk)
