find_package (Curses)
add_subdirectory (counters)
add_subdirectory (random)
add_subdirectory (gyro)
add_subdirectory (bitfields)
add_subdirectory (discovery)
add_subdirectory (file)
if (CURSES_HAVE_CURSES_H)
  add_subdirectory (terminal)
endif()
add_executable (template template.c)
target_include_directories (template PRIVATE ../../../include ${INCLUDE_DIRS})
target_link_libraries (template PRIVATE csdk)
